----------------------------------------------------------------------
Wed Jan  4 03:44:04 2006                        Michael Jennings (mej)

X resource tracking/debugging support.
----------------------------------------------------------------------
Wed Jan  4 04:14:14 2006                        Michael Jennings (mej)

Applied patches from Tres Melton <tres@mindspring.com> for SSE2
alignment and other shading-related issues.
----------------------------------------------------------------------
Wed Jan  4 04:22:13 2006                        Michael Jennings (mej)

Update copyright dates.
----------------------------------------------------------------------
Thu Jan  5 14:50:53 2006                        Michael Jennings (mej)

Fixed firewall bounce port checking from 2005-12-05.
----------------------------------------------------------------------
Mon Feb  6 01:02:15 2006                        Michael Jennings (mej)

Fixed paste from clipboard.
----------------------------------------------------------------------
Mon Feb  6 17:15:49 2006                        Michael Jennings (mej)

DragonFly BSD fixes from Joerg Sonnenberger <joerg@britannica.bec.de>.

Also some type mismatch fixes.
----------------------------------------------------------------------
Mon Feb 13 14:51:56 2006                        Michael Jennings (mej)

Update to libast 0.6+ API.
----------------------------------------------------------------------
Fri Feb 24 16:58:43 2006                        Michael Jennings (mej)

Add fallback attempt to open display in case NEED_LINUX_HACK is set
and shouldn't be.
----------------------------------------------------------------------
Wed May 17 15:42:28 2006                        Michael Jennings (mej)

Patch from Kim Woelders <kim@woelders.dk> to optimize transparent
Eterms moved an even multiple of the desktop size (i.e., to another
desktop area).
----------------------------------------------------------------------